# machine-learning

./: 05_1_gradientdescent_manually.py  09_dataloader.py  13_feedforward.py  16_tensorboard.py  17_save_load.py  AI_lesson1.py  AI_lesson2.py  AutoGradBasics.py  BackpropagationBasics.py  TensorBasics.py  mnistData.py  numberRec59.78.pth  numberRec60.540000000000006.pth  numberRec77.92999999999999.pth  numberRec78.03.pth  numberRec78.44.pth  numberRec87.0.pth  numberRec87.22.pth  numberRec96.74000000000001.pth  shapeRec.py  test.py
competitions/RSNA 2023 Abdominal Trauma Detection/: .gitignore  data.py  detector.py  map_test.py  test.py
cppTry/: CMakeLists.txt
cppTry/include/: matrix.hpp  network.hpp  vector.hpp
cppTry/src/c++/: vector.cpp
cppTry/src/python/: myNetwork.py  network.py  test.py
cppTry/src/testing/: test.py
lessons/: 14_cnn.py  AI_lesson1.py  AI_lesson2.py  AutoGradBasics.py  TensorBasics.py
mathTry/: B[784, 100, 10]-95.89999999999999.pickle  B[784, 100, 10]-96.74000000000001.pickle  B[784, 16, 16, 10]-92.15.pickle  B[784, 16, 16, 10]-93.56.pickle  W[784, 100, 10]-95.89999999999999.pickle  W[784, 100, 10]-96.74000000000001.pickle  W[784, 16, 16, 10]-92.15.pickle  W[784, 16, 16, 10]-93.56.pickle  cost_functions.py  data.py  dataManage.py  myNetwork.py  network.py  test biases  test weights  test.py
myAI/: applyMyOwnFilter.py  data.py  shapeRec.py  test.py
pyTorch/: numberRec76.77000000000001.pth  numberRec97.11999999999999.pth
pyTorch/myAI/: applyMyOwnFilter.py  shapeRec.py  test.py
